# deb-framework-zg

./: CMakeLists.txt  DO_THIS_FIRST.md  PATCH_NOTES_DUPLICATE_SYMBOL.md  README.md  codemagic.yaml  project.yml
bridges/: ZGPookingOverlayExports.mm  ZGPredictionOverlayExports.mm
cocos2dx/: ZGCocosPredictionOverlayLayer.cpp  ZGCocosPredictionOverlayLayer.hpp
docs/: AUTOSTART_DYLIB_AND_DEB.md  DYLIB_NOTES.md  FRAME_SCANNER.md  POOKING_REFERENCE_NOTES.md
examples/: HostAppUsage.mm
include/: ZGOverlayTypes.hpp  ZGPookingEngine.hpp  ZGPookingFrameScanner.hpp  ZGPookingOverlayController.h  ZGPookingOverlayExports.h  ZGPookingOverlayKit.h  ZGPredictionEngine.hpp  ZGPredictionOverlayController.h  ZGPredictionOverlayExports.h
scripts/: build_ios_dylib.sh  build_ios_framework.sh  package_artifacts.sh  package_deb.sh
src/: ZGPookingEngine.cpp  ZGPookingFrameScanner.cpp  ZGPookingOverlayController.mm  ZGPredictionEngine.cpp  ZGPredictionOverlayAutoStart.mm  ZGPredictionOverlayController.mm
tests/: pooking_engine_modes_test.cpp  pooking_scanner_engine_test.cpp  pooking_stabilizer_test.cpp
